--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
             <div class="row">
                 <div class="col-md-12 col-sm-12 portfolio-item">
-                    <img src="..//pettostorebd-main/image/home/612bn+1zfJL._AC_SX679_.jpg" class="img-responsive img-round-left col-md-6 col-sm-6" alt="">
+                    <img src="image/612bn+1zfJL._AC_SX679_.jpg" class="img-responsive img-round-left col-md-6 col-sm-6" alt="">
                     <div class="portfolio-caption col-md-6 col-sm-6">
                         <h2>Best Electronic for Daily</h2>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/01_electronics/001.html">GoPro LIT Hero</a></h3>
@@ -154,7 +154,7 @@
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/02_computer/003.html">ICC CAT6 Feed</a></h3>
                         <a href="../pettostorebd-main/computer.html" class="portfolio-link" data-toggle="modal">See More Computer...</a>
                     </div>
-                    <img src="../pettostorebd-main/image/home/gabriel-beaudry-5X5dCf4Pp44-unsplash.jpg" class="img-responsive img-round-right col-md-6 col-sm-6" alt="">
+                    <img src="image/gabriel-beaudry-5X5dCf4Pp44-unsplash.jpg" class="img-responsive img-round-right col-md-6 col-sm-6" alt="">
                 </div>
                 <div class="col-md-12 col-sm-12 portfolio-item">
                     <img src="image/home/baby.jpg" class="img-responsive img-round-left col-md-6 col-sm-6" alt="">
@@ -175,7 +175,7 @@
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/04_womenfashion/003.html">Swarovski Gema Crystal Bracelet</a></h3>
                         <a href="../pettostorebd-main/womenfashion.html" class="portfolio-link" data-toggle="modal">See More Women Fashion...</a>
                     </div>
-                    <img src="image/home/women.jpg" class="img-responsive img-round-right col-md-6 col-sm-6" alt="">
+                    <img src="image/women.jpg" class="img-responsive img-round-right col-md-6 col-sm-6" alt="">
                     
                 </div>
                 <!-- <div class="col-md-12 col-sm-12 portfolio-item">
@@ -283,3 +283,4 @@
 </body>
 
 </html>
+
