--- a/index.html
+++ b/index.html
@@ -136,44 +136,44 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12 portfolio-item">
                     <img src="image/612bn+1zfJL._AC_SX679_.jpg" class="img-responsive img-round-left col-md-6 col-sm-6" alt="">
-                    <div class="portfolio-caption col-md-6 col-sm-6">
+                    <div class="portfolio-caption text-right col-md-6 col-sm-6">
                         <h2>Best Electronic for Daily</h2>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/01_electronics/001.html">GoPro LIT Hero</a></h3>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/01_electronics/002.html">Fujifilm Instax Mini 12</a></h3>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/01_electronics/003.html">Ooma WP825</a></h3>
                         <!-- <br> -->
-                        <a href="../pettostorebd-main/electronics.html" class="portfolio-link" data-toggle="modal">See More Electronic..</a>
+                        <a href="../pettostorebd-main/electronics.html" class="" data-toggle="modal">See More Electronic..</a>
                     </div>
                     
                 </div>
                 <div class="col-md-12 col-sm-12 portfolio-item">
-                    <div class="portfolio-caption col-md-6 col-sm-6">
+                    <div class="portfolio-caption text-left col-md-6 col-sm-6">
                         <h2>Best Computer Items</h2>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/02_computer/001.html">HP Original 962</a></h3>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/02_computer/002.html">Elgato</a></h3>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/02_computer/003.html">ICC CAT6 Feed</a></h3>
-                        <a href="../pettostorebd-main/computer.html" class="portfolio-link" data-toggle="modal">See More Computer...</a>
+                        <a href="../pettostorebd-main/computer.html" class="" data-toggle="modal">See More Computer...</a>
                     </div>
                     <img src="image/gabriel-beaudry-5X5dCf4Pp44-unsplash.jpg" class="img-responsive img-round-right col-md-6 col-sm-6" alt="">
                 </div>
                 <div class="col-md-12 col-sm-12 portfolio-item">
                     <img src="image/baby.jpg" class="img-responsive img-round-left col-md-6 col-sm-6" alt="">
-                    <div class="portfolio-caption col-md-6 col-sm-6">
+                    <div class="portfolio-caption text-right col-md-6 col-sm-6">
                         <h2>Best choice of baby</h2>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/03_baby/001.html">Similac NeoSure</a></h3>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/03_baby/002.html">Enfamil NeuroPro</a></h3>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/03_baby/003.html">ICC CAT6 Feed</a></h3>
-                        <a href="../pettostorebd-main/baby.html" class="portfolio-link" data-toggle="modal">See More Baby...</a>
+                        <a href="../pettostorebd-main/baby.html" class="" data-toggle="modal">See More Baby...</a>
                     </div>
                 </div>
                 <div class="clearfix"></div>
                 <div class="col-md-12 col-sm-12 portfolio-item">
-                    <div class="portfolio-caption col-md-6 col-sm-6">
+                    <div class="portfolio-caption text-left col-md-6 col-sm-6">
                         <h2>Unique Items for Women</h2>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/04_womenfashion/001.html">Heart Pendant</a></h3>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/04_womenfashion/002.html">Swarovski Infinity Heart Jewelry</a></h3>
                         <h3 class="text-muted"><a href="../pettostorebd-main/product/04_womenfashion/003.html">Swarovski Gema Crystal Bracelet</a></h3>
-                        <a href="../pettostorebd-main/womenfashion.html" class="portfolio-link" data-toggle="modal">See More Women Fashion...</a>
+                        <a href="../pettostorebd-main/womenfashion.html" class="" data-toggle="modal">See More Women Fashion...</a>
                     </div>
                     <img src="image/women.jpg" class="img-responsive img-round-right col-md-6 col-sm-6" alt="">
                     
@@ -283,6 +283,3 @@
 </body>
 
 </html>
-
-
-
