--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                     <img src="image/612bn+1zfJL._AC_SX679_.jpg" class="img-responsive img-round-left col-md-6 col-sm-6" alt="">
                     <div class="portfolio-caption text-right col-md-6 col-sm-6">
                         <h2>Best Electronic for Daily</h2>
-                        <h3 class="text-muted"><a href="../pettostorebd-main/product/01_electronics/001.html">GoPro LIT Hero</a></h3>
-                        <h3 class="text-muted"><a href="../pettostorebd-main/product/01_electronics/002.html">Fujifilm Instax Mini 12</a></h3>
-                        <h3 class="text-muted"><a href="../pettostorebd-main/product/01_electronics/003.html">Ooma WP825</a></h3>
+                        <h3 class="text-muted"><a href="product/01_electronics/001.html">GoPro LIT Hero</a></h3>
+                        <h3 class="text-muted"><a href="product/01_electronics/002.html">Fujifilm Instax Mini 12</a></h3>
+                        <h3 class="text-muted"><a href="product/01_electronics/003.html">Ooma WP825</a></h3>
                         <!-- <br> -->
                         <a href="../pettostorebd-main/electronics.html" class="" data-toggle="modal">See More Electronic..</a>
                     </div>
@@ -283,3 +283,4 @@
 </body>
 
 </html>
+
